fixed spacing

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,8 +3,8 @@
     padding-top: 3rem;
     padding-bottom: 5rem;
     margin-bottom: -2rem;
-    margin-left: -0.5rem;
-    margin-right: -0.5rem;
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
 }
 
 .contactStyling p {
